--- a/res/layout/mobile_bank_layout.xml
+++ b/res/layout/mobile_bank_layout.xml
@@ -1,57 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="#e7e4e4"
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:background="@drawable/header_background_button"
         android:layout_marginBottom="12dp">
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1" >
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/mobile_bank_layout_transaction_button"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_margin="12dp"
                 android:background="@drawable/new_transaction_button" >
             </Button>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1" >
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/mobile_bank_layout_summary_button"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_margin="12dp"
                 android:background="@drawable/new_transaction_button" >
             </Button>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1" >
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:id="@+id/mobile_bank_layout_settings_button"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_margin="12dp"
                 android:background="@drawable/new_transaction_button" >
             </Button>
@@ -60,7 +63,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="60dp" >
         <TextView 
             android:layout_width="wrap_content"
