--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -65,8 +65,8 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="vertical" >
 
@@ -91,7 +91,7 @@
             </EditText>
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
 
                 <TextView
@@ -118,8 +118,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="vertical" >
 
@@ -145,8 +145,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="vertical" >
 
@@ -190,14 +190,14 @@
             <Button
                 android:id="@+id/edit_place_layout_done_button"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:background="@drawable/harvard_button_selector" />
 
             <Button
                 android:id="@+id/edit_place_layout_clear_button"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:background="@drawable/vancouve_button_selector" />
         </LinearLayout>
