--- a/res/layout/attribute_list_row_layout.xml
+++ b/res/layout/attribute_list_row_layout.xml
@@ -26,6 +26,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
                     android:layout_weight="1"
+                    android:textColor="#4a4a4a"
                     android:layout_gravity="center_vertical">
             </TextView>
 
