Modified transaction layout ui

--- a/res/layout/transaction_layout.xml
+++ b/res/layout/transaction_layout.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#e7e4e4"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="@drawable/header_background_button"
@@ -18,10 +18,10 @@
 
             <Button
                 android:id="@+id/transaction_layout_back_button"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp" >
+                android:layout_width="50dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/back"
+                android:layout_centerVertical="true">
             </Button>
 
             <TextView
@@ -37,24 +37,109 @@
 
             <Button
                 android:id="@+id/transaction_layout_search_button"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentRight="true"
+                android:layout_width="50dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/search"
+                android:layout_toLeftOf="@+id/transaction_layout_help_button"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="50dp"
                 android:clickable="true" >
             </Button>
+
+            <Button
+                android:id="@+id/transaction_layout_help_button"
+                android:layout_width="50dp"
+                android:background="@drawable/help"
+                android:layout_height="fill_parent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:clickable="true" >
+            </Button>
+
         </RelativeLayout>
 
-        <Button
-            android:id="@+id/transaction_layout_help_button"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:clickable="true" >
-        </Button>
+
+    </RelativeLayout>-->
+
+    <RelativeLayout
+            android:layout_width="fill_parent"
+            android:background="#333333"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:orientation="horizontal">
+
+        <RelativeLayout
+                android:layout_width="53dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/button_selector"
+                android:layout_alignParentLeft="true"
+                android:clickable="true"
+                android:id="@+id/capture_layout_help">
+            <ImageView
+                    android:layout_height="32dp"
+                    android:layout_width="32dp"
+                    android:layout_centerInParent="true"
+                    android:id="@+id/capture_layout_about_icon"
+                    android:background="@drawable/back">
+            </ImageView>
+
+            <TextView
+                    android:id="@+id/tab_splitter"
+                    android:layout_width="1dp"
+
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentRight="true"
+                    android:background="#4a4a4a">
+            </TextView>
+        </RelativeLayout>
+
+        <RelativeLayout
+                android:layout_width="53dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/button_selector"
+                android:layout_alignParentRight="true"
+                android:clickable="true"
+                android:id="@+id/capture_layout_send">
+            <ImageView
+                    android:layout_height="32dp"
+                    android:layout_width="32dp"
+                    android:layout_centerInParent="true"
+                    android:id="@+id/capture_layout_send_icon"
+                    android:background="@drawable/help">
+            </ImageView>
+
+            <TextView
+                    android:id="@+id/tab_splitter"
+                    android:layout_width="1dp"
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentLeft="true"
+                    android:background="#4a4a4a">
+            </TextView>
+        </RelativeLayout>
+
+        <RelativeLayout
+                android:layout_width="53dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/button_selector"
+                android:clickable="true"
+                android:id="@+id/capture_layout_clear"
+                android:layout_toLeftOf="@+id/capture_layout_send">
+            <ImageView
+                    android:layout_height="32dp"
+                    android:layout_width="32dp"
+                    android:layout_centerInParent="true"
+                    android:id="@+id/capture_layout_clear_icon"
+                    android:background="@drawable/search">
+            </ImageView>
+
+            <TextView
+                    android:id="@+id/tab_splitter"
+                    android:layout_width="1dp"
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentLeft="true"
+                    android:background="#4a4a4a">
+            </TextView>
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -170,7 +255,7 @@
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_gravity="bottom"
-        android:background="@drawable/header_background_button" >
+        android:background="#333333" >
 
          <LinearLayout
             android:layout_width="fill_parent"
@@ -178,19 +263,46 @@
             android:layout_centerVertical="true"
             android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/transaction_layout_done_button"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/new_transaction_button"
-                android:layout_weight="1"/>
+             <RelativeLayout
+                     android:layout_marginLeft="6dp"
+                     android:layout_marginRight="3dp"
+                     android:layout_marginTop="6dp"
+                     android:layout_marginBottom="6dp"
+                     android:layout_width="fill_parent"
+                     android:layout_height="fill_parent"
+                     android:background="@drawable/done_button_selector"
+                     android:clickable="true"
+                     android:layout_weight="1"
+                     android:id="@+id/capture_layout_send">
+                 <TextView
+                         android:layout_height="wrap_content"
+                         android:layout_width="wrap_content"
+                         android:layout_centerInParent="true"
+                         android:id="@+id/capture_layout_clear_icon"
+                         android:text="Done">
+                 </TextView>
+             </RelativeLayout>
 
-            <Button
-                android:id="@+id/transaction_layout_cancel_button"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/new_transaction_button"
-                android:layout_weight="1"/>
+             <RelativeLayout
+                     android:layout_marginLeft="3dp"
+                     android:layout_marginRight="6dp"
+                     android:layout_marginTop="6dp"
+                     android:layout_marginBottom="6dp"
+                     android:layout_width="fill_parent"
+                     android:layout_height="fill_parent"
+                     android:background="@drawable/done_button_selector"
+                     android:clickable="true"
+                     android:id="@+id/capture_layout_clear"
+                     android:layout_weight="1">
+                 <TextView
+                         android:layout_height="wrap_content"
+                         android:layout_width="wrap_content"
+                         android:layout_centerInParent="true"
+                         android:id="@+id/capture_layout_clear_icon"
+                         android:text="Cancel">
+                 </TextView>
+
+             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
