--- a/res/layout/mobile_bank_layout.xml
+++ b/res/layout/mobile_bank_layout.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#e7e4e4"
+    android:background="#ffffff"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="100dp"
-        android:background="@drawable/header_background_button"
+        android:background="#333333"
         android:layout_marginBottom="12dp">
     </RelativeLayout>
 
