--- a/res/layout/client_details_list_layout.xml
+++ b/res/layout/client_details_list_layout.xml
@@ -2,59 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="#e7e4e4"
+              android:background="#ffffff"
               android:orientation="vertical" >
 
     <RelativeLayout
             android:layout_width="fill_parent"
+            android:background="#333333"
             android:layout_height="50dp"
-            android:background="@drawable/header_background_button"
-            android:clickable="true" >
+            android:layout_gravity="bottom"
+            android:orientation="horizontal">
 
         <RelativeLayout
-                android:layout_width="fill_parent"
+                android:layout_width="53dp"
                 android:layout_height="fill_parent"
-                android:layout_alignParentLeft="true" >
-
-            <Button
-                    android:id="@+id/client_details_list_layout_back_button"
-                    android:layout_width="32dp"
+                android:background="@drawable/button_selector"
+                android:layout_alignParentLeft="true"
+                android:clickable="true"
+                android:id="@+id/client_details_list_layout_back">
+            <ImageView
                     android:layout_height="32dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp" >
-            </Button>
+                    android:layout_width="32dp"
+                    android:layout_centerInParent="true"
+                    android:id="@+id/capture_layout_about_icon"
+                    android:background="@drawable/back">
+            </ImageView>
 
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/client_details_list_layout_back_button"
-                    android:text="Client Details"
-                    android:textColor="#ffffff"
-                    android:textSize="20dp" >
+                    android:id="@+id/tab_splitter"
+                    android:layout_width="1dp"
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentRight="true"
+                    android:background="#4a4a4a">
             </TextView>
-
-            <!--<Button
-                android:id="@+id/search_result_layout_search_button"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="50dp"
-                android:clickable="true" >
-            </Button>-->
         </RelativeLayout>
 
-        <Button
-                android:id="@+id/client_details_list_layout_help_button"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+        <RelativeLayout
+                android:layout_width="53dp"
+                android:layout_height="fill_parent"
+                android:background="@drawable/button_selector"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:clickable="true" >
-        </Button>
+                android:clickable="true"
+                android:id="@+id/client_details_list_layout_done">
+            <ImageView
+                    android:layout_height="32dp"
+                    android:layout_width="32dp"
+                    android:layout_centerInParent="true"
+                    android:id="@+id/capture_layout_send_icon"
+                    android:background="@drawable/done">
+            </ImageView>
+
+            <TextView
+                    android:id="@+id/tab_splitter"
+                    android:layout_width="1dp"
+                    android:layout_height="fill_parent"
+                    android:layout_alignParentLeft="true"
+                    android:background="#4a4a4a">
+            </TextView>
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <LinearLayout
@@ -71,34 +76,6 @@
                 android:dividerHeight="1dp">
         </ListView>
 
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom"
-            android:background="@drawable/header_background_button" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/client_details_list_layout_done_button"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/new_transaction_button" />
-
-            <Button
-                android:id="@+id/client_details_list_layout_cancel_button"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/new_transaction_button" />
-        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
