--- a/res/layout/client_list_row_layout.xml
+++ b/res/layout/client_list_row_layout.xml
@@ -5,7 +5,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-    <ImageView
+    <!--<ImageView
             android:id="@+id/client_list_row_layout_client_icon"
             android:layout_width="40dp"
             android:layout_gravity="center_vertical"
@@ -14,6 +14,17 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="7dp"
             android:layout_height="40dp">
+    </ImageView>-->
+
+    <ImageView
+        android:id="@+id/client_list_row_layout_client_icon"
+        android:layout_width="32dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="17dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="5dp"
+        android:layout_height="32dp">
     </ImageView>
 
     <LinearLayout
