--- a/res/layout/transaction_layout.xml
+++ b/res/layout/transaction_layout.xml
@@ -273,7 +273,7 @@
                      android:background="@drawable/done_button_selector"
                      android:clickable="true"
                      android:layout_weight="1"
-                     android:id="@+id/capture_layout_send">
+                     android:id="@+id/transaction_layout_done">
                  <TextView
                          android:layout_height="wrap_content"
                          android:layout_width="wrap_content"
